--- a/src/application/klijent-rezervacija.fxml
+++ b/src/application/klijent-rezervacija.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -32,8 +36,8 @@
       </AnchorPane>
       <AnchorPane prefHeight="325.0" prefWidth="600.0" style="-fx-background-color: #D9F2E9;">
          <children>
-            <ListView fx:id="listaAranzmana" layoutX="56.0" layoutY="45.0" prefHeight="217.0" prefWidth="235.0" />
-            <GridPane layoutX="300.0" layoutY="45.0" prefHeight="142.0" prefWidth="245.0">
+            <ListView fx:id="listaAranzmana" layoutX="56.0" layoutY="45.0" prefHeight="142.0" prefWidth="235.0" />
+            <GridPane layoutX="300.0" layoutY="14.0" prefHeight="142.0" prefWidth="245.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -64,25 +68,41 @@
                   <Label fx:id="labelSmjestaj" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
             </GridPane>
-            <Button fx:id="dugmeIzleti" layoutX="56.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Izleti" onAction="#izborIzlet"/>
-            <Button fx:id="dugmePutovanja" layoutX="179.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="112.0" text="Putovanja" onAction="#izborPutovanje"/>
-            <ImageView fx:id="naprijed" fitHeight="37.0" fitWidth="33.0" layoutX="549.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@arrow.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="nazad" fitHeight="37.0" fitWidth="33.0" layoutX="14.0" layoutY="7.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@arrow.png" />
-               </image>
-            </ImageView>
-            <RadioButton fx:id="sortPolazak" layoutX="92.0" layoutY="294.0" mnemonicParsing="false" onAction="#sortPolazak" text="Po vremenu do polaska">
+            <Button fx:id="dugmeIzleti" layoutX="56.0" layoutY="14.0" mnemonicParsing="false" onAction="#izborIzlet" prefHeight="25.0" prefWidth="112.0" text="Izleti" />
+            <Button fx:id="dugmePutovanja" layoutX="179.0" layoutY="14.0" mnemonicParsing="false" onAction="#izborPutovanje" prefHeight="25.0" prefWidth="112.0" text="Putovanja" />
+            <RadioButton fx:id="sortPolazak" layoutX="14.0" layoutY="260.0" mnemonicParsing="false" onAction="#sortPolazak" text="Po vremenu do polaska">
                <toggleGroup>
                   <ToggleGroup fx:id="sort" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="sortCijena" layoutX="92.0" layoutY="272.0" mnemonicParsing="false" onAction="#sortCijena" text="Po cijeni" toggleGroup="$sort" />
-            <Label layoutX="56.0" layoutY="272.0" text="Sort:" />
+            <RadioButton fx:id="sortCijena" layoutX="14.0" layoutY="238.0" mnemonicParsing="false" onAction="#sortCijena" text="Po cijeni" toggleGroup="$sort" />
+            <Label layoutX="35.0" layoutY="214.0" text="Sort:" />
+            <Label layoutX="177.0" layoutY="249.0" text="Cijena:" />
+            <TextField fx:id="cijenaLow" layoutX="243.0" layoutY="245.0" prefHeight="25.0" prefWidth="66.0" promptText="od" />
+            <TextField fx:id="cijenaHigh" layoutX="326.0" layoutY="245.0" prefHeight="25.0" prefWidth="66.0" promptText="do" />
+            <Label layoutX="408.0" layoutY="248.0" text="Period:" />
+            <DatePicker fx:id="dateLow" layoutX="402.0" layoutY="267.0" promptText="od" />
+            <DatePicker fx:id="dateHigh" layoutX="402.0" layoutY="297.0" promptText="do" />
+            <Label layoutX="177.0" layoutY="219.0" text="Destinacija:" />
+            <ComboBox fx:id="destinacija" layoutX="243.0" layoutY="215.0" prefWidth="150.0" promptText="izaberite" />
+            <Label layoutX="177.0" layoutY="187.0" text="Br. zvjezdica smještaja:" />
+            <ChoiceBox fx:id="brZvjezdica" layoutX="302.0" layoutY="183.0" prefHeight="25.0" prefWidth="60.0" />
+            <Label layoutX="178.0" layoutY="276.0" text="Vrsta sobe:" />
+            <Label layoutX="179.0" layoutY="303.0" text="Prevoz:" />
+            <ChoiceBox fx:id="vrstaSobe" layoutX="243.0" layoutY="272.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="prevoz" layoutX="243.0" layoutY="299.0" prefWidth="150.0" />
+            <Button fx:id="rezervisi" layoutX="402.0" layoutY="163.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="174.0" text="Rezerviši" onAction="#rezervisi" />
+            <Button fx:id="filtriraj" layoutX="402.0" layoutY="215.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="174.0" text="Filtriraj" onAction="#filtriraj" />
+            <Label fx:id="greska" layoutX="402.0" layoutY="187.0" textFill="RED" />
+            <Button fx:id="nazad" alignment="CENTER" layoutY="6.0" mnemonicParsing="false" onAction="#nazad" style="-fx-background-color: #D9F2E9; -fx-border-color: #D9F2E9;">
+               <graphic>
+                  <ImageView fitHeight="37.0" fitWidth="33.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@arrow.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
    </children>
