--- a/src/fxml/aplikacija.fxml
+++ b/src/fxml/aplikacija.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AplikacijaController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AplikacijaController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #88D7C9;">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="4.0" layoutY="164.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logo_black.png" />
+                  <Image url="@../media/logo_black.png" />
                </image>
             </ImageView>
          </children>
@@ -28,8 +28,8 @@
             <PasswordField fx:id="password" layoutX="124.0" layoutY="195.0" promptText="Lozinka" />
             <Button layoutX="149.0" layoutY="232.0" mnemonicParsing="false" onAction="#dugmePrijava" prefHeight="25.0" prefWidth="99.0" text="Prijava" />
             <Line endX="100.0" layoutX="198.0" layoutY="279.0" startX="-100.0" />
-            <Label layoutX="157.0" layoutY="292.0" text="Nemate nalog?" />
-            <Button layoutX="160.0" layoutY="309.0" mnemonicParsing="false" text="Registracija" onAction="#dugmeRegistracija"/>
+            <Label layoutX="160.0" layoutY="280.0" text="Nemate nalog?" />
+            <Button layoutX="160.0" layoutY="309.0" mnemonicParsing="false" onAction="#dugmeRegistracija" styleClass="button" text="Registracija" />
             <Label layoutX="81.0" layoutY="102.0" text="Dobro došli na GoTravel!">
                <font>
                   <Font name="System Bold" size="20.0" />
