--- a/src/fxml/klijent-rezervacija.fxml
+++ b/src/fxml/klijent-rezervacija.fxml
@@ -18,13 +18,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KlijentRezervacijaController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KlijentRezervacijaController">
    <children>
       <AnchorPane prefHeight="75.0" prefWidth="600.0" style="-fx-background-color: #88D7C9;">
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logo_black.png" />
+                  <Image url="@../media/logo_black.png" />
                </image>
             </ImageView>
             <Label layoutX="443.0" layoutY="18.0" text="Rezervacija">
@@ -34,13 +34,13 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="325.0" prefWidth="600.0" style="-fx-background-color: #D9F2E9;">
+      <AnchorPane prefHeight="527.0" prefWidth="700.0" style="-fx-background-color: #D9F2E9;" stylesheets="@style.css">
          <children>
-            <ListView fx:id="listaAranzmana" layoutX="56.0" layoutY="45.0" prefHeight="142.0" prefWidth="235.0" />
-            <GridPane layoutX="300.0" layoutY="14.0" prefHeight="142.0" prefWidth="245.0">
+            <ListView fx:id="listaAranzmana" layoutX="105.0" layoutY="49.0" prefHeight="230.0" prefWidth="235.0" />
+            <GridPane layoutX="366.0" layoutY="20.0" prefHeight="206.0" prefWidth="320.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="78.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="242.0" minWidth="10.0" prefWidth="242.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -68,41 +68,46 @@
                   <Label fx:id="labelSmjestaj" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
             </GridPane>
-            <Button fx:id="dugmeIzleti" layoutX="56.0" layoutY="14.0" mnemonicParsing="false" onAction="#izborIzlet" prefHeight="25.0" prefWidth="112.0" text="Izleti" />
-            <Button fx:id="dugmePutovanja" layoutX="179.0" layoutY="14.0" mnemonicParsing="false" onAction="#izborPutovanje" prefHeight="25.0" prefWidth="112.0" text="Putovanja" />
-            <RadioButton fx:id="sortPolazak" layoutX="14.0" layoutY="260.0" mnemonicParsing="false" onAction="#sortPolazak" text="Po vremenu do polaska">
+            <Button fx:id="dugmeIzleti" layoutX="105.0" layoutY="15.0" mnemonicParsing="false" onAction="#izborIzlet" prefHeight="25.0" prefWidth="112.0" text="Izleti" />
+            <Button fx:id="dugmePutovanja" layoutX="228.0" layoutY="15.0" mnemonicParsing="false" onAction="#izborPutovanje" prefHeight="25.0" prefWidth="112.0" text="Putovanja" />
+            <RadioButton fx:id="sortPolazak" layoutX="267.0" layoutY="385.0" mnemonicParsing="false" onAction="#sortPolazak" text="Po vremenu do polaska">
                <toggleGroup>
                   <ToggleGroup fx:id="sort" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="sortCijena" layoutX="14.0" layoutY="238.0" mnemonicParsing="false" onAction="#sortCijena" text="Po cijeni" toggleGroup="$sort" />
-            <Label layoutX="35.0" layoutY="214.0" text="Sort:" />
-            <Label layoutX="177.0" layoutY="249.0" text="Cijena:" />
-            <TextField fx:id="cijenaLow" layoutX="243.0" layoutY="245.0" prefHeight="25.0" prefWidth="66.0" promptText="od" />
-            <TextField fx:id="cijenaHigh" layoutX="326.0" layoutY="245.0" prefHeight="25.0" prefWidth="66.0" promptText="do" />
-            <Label layoutX="408.0" layoutY="248.0" text="Period:" />
-            <DatePicker fx:id="dateLow" layoutX="402.0" layoutY="267.0" promptText="od" />
-            <DatePicker fx:id="dateHigh" layoutX="402.0" layoutY="297.0" promptText="do" />
-            <Label layoutX="177.0" layoutY="219.0" text="Destinacija:" />
-            <ComboBox fx:id="destinacija" layoutX="243.0" layoutY="215.0" prefWidth="150.0" promptText="izaberite" />
-            <Label layoutX="177.0" layoutY="187.0" text="Br. zvjezdica smještaja:" />
-            <ChoiceBox fx:id="brZvjezdica" layoutX="302.0" layoutY="183.0" prefHeight="25.0" prefWidth="60.0" />
-            <Label layoutX="178.0" layoutY="276.0" text="Vrsta sobe:" />
-            <Label layoutX="179.0" layoutY="303.0" text="Prevoz:" />
-            <ChoiceBox fx:id="vrstaSobe" layoutX="243.0" layoutY="272.0" prefWidth="150.0" />
-            <ChoiceBox fx:id="prevoz" layoutX="243.0" layoutY="299.0" prefWidth="150.0" />
-            <Button fx:id="rezervisi" layoutX="402.0" layoutY="163.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="174.0" text="Rezerviši" onAction="#rezervisi" />
-            <Button fx:id="filtriraj" layoutX="402.0" layoutY="215.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="174.0" text="Filtriraj" onAction="#filtriraj" />
+            <RadioButton fx:id="sortCijena" layoutX="267.0" layoutY="362.0" mnemonicParsing="false" onAction="#sortCijena" text="Po cijeni" toggleGroup="$sort" />
+            <Label layoutX="267.0" layoutY="341.0" text="Sort:" />
+            <Label layoutX="26.0" layoutY="415.0" text="Cijena:" />
+            <TextField fx:id="cijenaLow" layoutX="92.0" layoutY="411.0" prefHeight="25.0" prefWidth="66.0" promptText="od" />
+            <TextField fx:id="cijenaHigh" layoutX="175.0" layoutY="411.0" prefHeight="25.0" prefWidth="66.0" promptText="do" />
+            <Label layoutX="273.0" layoutY="415.0" text="Period:" />
+            <DatePicker fx:id="dateLow" layoutX="270.0" layoutY="442.0" promptText="od" />
+            <DatePicker fx:id="dateHigh" layoutX="270.0" layoutY="474.0" promptText="do" />
+            <Label layoutX="26.0" layoutY="446.0" text="Destinacija:" />
+            <ComboBox fx:id="destinacija" layoutX="92.0" layoutY="442.0" prefHeight="25.0" prefWidth="150.0" promptText="izaberite" />
+            <Label layoutX="26.0" layoutY="349.0" text="Br. zvjezdica smještaja:" />
+            <ChoiceBox fx:id="brZvjezdica" layoutX="151.0" layoutY="345.0" prefHeight="25.0" prefWidth="87.0" />
+            <Label layoutX="26.0" layoutY="385.0" text="Vrsta sobe:" />
+            <Label layoutX="26.0" layoutY="478.0" text="Prevoz:" />
+            <ChoiceBox fx:id="vrstaSobe" layoutX="91.0" layoutY="381.0" prefWidth="150.0" />
+            <ChoiceBox fx:id="prevoz" layoutX="93.0" layoutY="474.0" prefHeight="25.0" prefWidth="150.0" />
+            <Button fx:id="rezervisi" layoutX="435.0" layoutY="249.0" mnemonicParsing="false" onAction="#rezervisi" prefHeight="25.0" prefWidth="174.0" text="Rezerviši" />
+            <Button fx:id="filtriraj" layoutX="473.0" layoutY="475.0" mnemonicParsing="false" onAction="#filtriraj" prefHeight="25.0" prefWidth="97.0" text="Filtriraj" />
             <Label fx:id="greska" layoutX="402.0" layoutY="187.0" textFill="RED" />
             <Button fx:id="nazad" alignment="CENTER" layoutY="6.0" mnemonicParsing="false" onAction="#nazad" style="-fx-background-color: #D9F2E9; -fx-border-color: #D9F2E9;">
                <graphic>
                   <ImageView fitHeight="37.0" fitWidth="33.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@arrow.png" />
+                        <Image url="@../media/arrow.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
+            <Label layoutX="14.0" layoutY="310.0" text="Filteri">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
