--- a/src/fxml/promjena-lozinke.fxml
+++ b/src/fxml/promjena-lozinke.fxml
@@ -15,7 +15,7 @@
          <children>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@logo_black.png" />
+                  <Image url="@../media/logo_black.png" />
                </image>
             </ImageView>
             <Label layoutX="337.0" layoutY="18.0" text="Promjena lozinke">
