--- a/src/fxml/admin.fxml
+++ b/src/fxml/admin.fxml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Admin"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #88D7C9;">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../media/logo_black.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="ime" layoutX="26.0" layoutY="72.0" prefHeight="20.0" prefWidth="147.0" text="Label" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="prezime" layoutX="26.0" layoutY="92.0" prefHeight="20.0" prefWidth="147.0" text="Label" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="username" layoutX="26.0" layoutY="112.0" prefHeight="20.0" prefWidth="147.0" text="Label" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Button layoutX="45.0" layoutY="310.0" mnemonicParsing="false" onAction="#promjenaLozinke" text="Promjena lozinke" />
+            <Button layoutX="44.0" layoutY="343.0" mnemonicParsing="false" onAction="#odjava" prefHeight="29.0" prefWidth="111.0" text="Odjava" />
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="400.0" prefWidth="405.0" style="-fx-background-color: #D9F2E9;">
+         <children>
+            <Label layoutX="14.0" layoutY="20.0" text="Broj admina:" />
+            <Label fx:id="brAdmina" layoutX="89.0" layoutY="20.0" text="#" />
+            <Button fx:id="noviAdmin" layoutX="146.0" layoutY="14.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="184.0" text="Dodaj admina" />
+         </children>
+      </AnchorPane>
+   </children>
+</HBox>
