Dodata validacija podataka za rezervaciju.
Signed-off-by: drmajstorovic <draganamajstorovic02@yahoo.com>

--- a/src/fxml/klijent-rezervacija.fxml
+++ b/src/fxml/klijent-rezervacija.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -91,9 +92,9 @@
             <Label layoutX="26.0" layoutY="478.0" text="Prevoz:" />
             <ChoiceBox fx:id="vrstaSobe" layoutX="91.0" layoutY="381.0" prefWidth="150.0" />
             <ChoiceBox fx:id="prevoz" layoutX="93.0" layoutY="474.0" prefHeight="25.0" prefWidth="150.0" />
-            <Button fx:id="rezervisi" layoutX="435.0" layoutY="249.0" mnemonicParsing="false" onAction="#rezervisi" prefHeight="25.0" prefWidth="174.0" text="Rezerviši" />
+            <Button fx:id="rezervisi" layoutX="523.0" layoutY="272.0" mnemonicParsing="false" onAction="#rezervisi" prefHeight="29.0" prefWidth="148.0" text="Rezerviši" />
             <Button fx:id="filtriraj" layoutX="473.0" layoutY="475.0" mnemonicParsing="false" onAction="#filtriraj" prefHeight="25.0" prefWidth="97.0" text="Filtriraj" />
-            <Label fx:id="greska" layoutX="402.0" layoutY="187.0" textFill="RED" />
+            <Label fx:id="greska" alignment="TOP_LEFT" layoutX="366.0" layoutY="310.0" prefHeight="51.0" prefWidth="304.0" textFill="RED" />
             <Button fx:id="nazad" alignment="CENTER" layoutY="6.0" mnemonicParsing="false" onAction="#nazad" style="-fx-background-color: #D9F2E9; -fx-border-color: #D9F2E9;">
                <graphic>
                   <ImageView fitHeight="37.0" fitWidth="33.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
@@ -108,6 +109,8 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
+            <PasswordField fx:id="lozinka" layoutX="366.0" layoutY="273.0" promptText="Password" />
+            <Label layoutX="366.0" layoutY="246.0" text="Unesite svoju lozinku:" />
          </children>
       </AnchorPane>
    </children>
