--- a/src/fxml/klijent-pregled.fxml
+++ b/src/fxml/klijent-pregled.fxml
@@ -3,13 +3,19 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KlijentPregledController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="700.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.KlijentPregledController">
    <children>
       <AnchorPane prefHeight="75.0" prefWidth="600.0" style="-fx-background-color: #88D7C9;">
          <children>
@@ -25,7 +31,7 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane prefHeight="325.0" prefWidth="600.0" style="-fx-background-color: #D9F2E9;">
+      <AnchorPane prefHeight="550.0" prefWidth="700.0" style="-fx-background-color: #D9F2E9;">
          <children>
             <Button fx:id="nazad" alignment="CENTER" layoutY="6.0" mnemonicParsing="false" onAction="#nazad" style="-fx-background-color: #D9F2E9; -fx-border-color: #D9F2E9;">
                <graphic>
@@ -36,14 +42,66 @@
                   </ImageView>
                </graphic>
             </Button>
-            <ListView fx:id="listaRezervacija" layoutX="51.0" layoutY="51.0" prefHeight="237.0" prefWidth="217.0" />
-            <Button fx:id="dugmeAktivne" layoutX="51.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="66.0" text="Aktivne" />
-            <Button fx:id="dugmeProtekle" layoutX="125.0" layoutY="15.0" mnemonicParsing="false" text="Protekle" />
-            <Button fx:id="dugmeOtkazane" layoutX="197.0" layoutY="15.0" mnemonicParsing="false" text="Otkazane" />
-            <Label layoutX="286.0" layoutY="19.0" text="Ukupno potrošeno novca:" />
-            <Label fx:id="potrosenoLabel" layoutX="412.0" layoutY="19.0" />
-            <Label layoutX="286.0" layoutY="43.0" text="Trebate još doplatiti:" />
-            <Label fx:id="doplatitiLabel" layoutX="378.0" layoutY="43.0" />
+            <ListView fx:id="listaRezervacija" layoutX="112.0" layoutY="50.0" prefHeight="237.0" prefWidth="217.0" />
+            <Button fx:id="dugmeAktivne" layoutX="112.0" layoutY="14.0" mnemonicParsing="false" onAction="#dugmeAktivne" prefHeight="25.0" prefWidth="66.0" text="Aktivne" />
+            <Button fx:id="dugmeProtekle" layoutX="186.0" layoutY="14.0" mnemonicParsing="false" onAction="#dugmeProtekle" text="Protekle" />
+            <Button fx:id="dugmeOtkazane" layoutX="258.0" layoutY="14.0" mnemonicParsing="false" onAction="#dugmeOtkazane" text="Otkazane" />
+            <Label layoutX="361.0" layoutY="14.0" text="Ukupno potrošeno novca:" />
+            <Label fx:id="potrosenoLabel" layoutX="509.0" layoutY="15.0" prefHeight="17.0" prefWidth="80.0" />
+            <Label layoutX="361.0" layoutY="37.0" text="Trebate još doplatiti:" />
+            <Label fx:id="doplatitiLabel" layoutX="479.0" layoutY="37.0" prefHeight="17.0" prefWidth="92.0" />
+            <Label fx:id="objasnjenje" layoutX="128.0" layoutY="287.0" text="( * = manje od 3 dana do polaska )">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <AnchorPane fx:id="rezervacijaAction" layoutX="22.0" layoutY="304.0" prefHeight="202.0" prefWidth="656.0">
+               <children>
+                  <Label layoutX="361.0" layoutY="14.0" text="Cijena aranzmana:" />
+                  <Label layoutX="361.0" layoutY="31.0" text="Uplaćeno:" />
+                  <Label layoutX="361.0" layoutY="48.0" text="Za doplatiti:" />
+                  <Label fx:id="labelCijena" layoutX="470.0" layoutY="14.0" text="Label" />
+                  <Label fx:id="labelUplaceno" layoutX="470.0" layoutY="31.0" text="Label" />
+                  <Label fx:id="labelDoplatiti" layoutX="470.0" layoutY="48.0" text="Label" />
+                  <Label layoutX="361.0" layoutY="74.0" text="Iznos kojeg želite da doplatite:" />
+                  <TextField fx:id="fieldIznos" layoutX="535.0" layoutY="70.0" prefHeight="27.0" prefWidth="103.0" />
+                  <Label layoutX="361.0" layoutY="100.0" text="Potvrdite lozinku:" />
+                  <PasswordField fx:id="lozinka" layoutX="361.0" layoutY="117.0" prefHeight="27.0" prefWidth="137.0" />
+                  <Button fx:id="uplati" layoutX="505.0" layoutY="116.0" mnemonicParsing="false" onAction="#uplati" prefHeight="17.0" prefWidth="137.0" text="Uplati" />
+                  <Label fx:id="greska" alignment="TOP_LEFT" layoutX="361.0" layoutY="154.0" prefHeight="27.0" prefWidth="275.0" text="Label" textFill="RED" />
+                  <Button fx:id="otkazi" layoutX="95.0" layoutY="74.0" mnemonicParsing="false" onAction="#otkazi" prefHeight="29.0" prefWidth="137.0" text="Otkaži rezervaciju" />
+                  <Label layoutX="14.0" layoutY="97.0" prefHeight="90.0" prefWidth="298.0" text="Za ukidanje rezervacije do čijeg polaska je ostalo dvije sedmice ili više, agencija vam vraća sav uplaćeni novac; u suprotnom, agencija zadržava 50% od ukupne cijene aranžmana, a uplaćeni ostatak vam se vraća" wrapText="true" />
+                  <Line endX="100.0" endY="-27.0" layoutX="228.0" layoutY="32.0" startX="100.0" startY="162.0" />
+               </children>
+            </AnchorPane>
+            <GridPane fx:id="aranzmanInfo" layoutX="349.0" layoutY="72.0" prefHeight="202.0" prefWidth="320.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="78.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="242.0" minWidth="10.0" prefWidth="242.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="36.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="53.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Label text="Naziv:" />
+                  <Label text="Destinacija:" GridPane.rowIndex="1" />
+                  <Label text="Prevoz:" GridPane.rowIndex="2" />
+                  <Label text="Polazak:" GridPane.rowIndex="3" />
+                  <Label text="Povratak:" GridPane.rowIndex="4" />
+                  <Label text="Smještaj:" GridPane.rowIndex="5" />
+                  <Label fx:id="labelNaziv" GridPane.columnIndex="1" />
+                  <Label fx:id="labelDestinacija" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label fx:id="labelPrevoz" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label fx:id="labelPolazak" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="labelDolazak" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label fx:id="labelSmjestaj" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+               </children>
+            </GridPane>
          </children>
       </AnchorPane>
    </children>
